--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 	<head>
 				<meta name="Doge" content="Doge">
 				<meta charset="utf-8">
 
-			<title>Doge</title>
+			<title>Doge's page</title>
 			<link  href="style.css rel="stylesheet" type="text/css"">
-			<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One:300,400&display=swap" rel="stylesheet">
-			<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+			<link rel="preconnect" href="https://fonts.gstatic.com">
+			<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+			<style>
+				body {
+					background-color: white;
+				}
+			</style>
 	</head>
 	<body>
-		<h1 class="Welcome"> 🐶 Welcome to the Doge meme page 🐶 </h1>
-			<p class="sito-web-doge"> Sito web ufficiale del Doge </p></div>
-		<div><a id="Telegram-channel" href="https://t.me/dogismo" target="_blank">Telegram Channel of Doge!</a> <br></div>
+		<h1 class="Welcome"> 🐶 Welcome to "new" the Doge page 🐶 </h1>
+			<p> A simple site of Doge </p>
 			<img id="Kabosu_doge" src="./img/Doge_(meme).jpg" alt=Kabosu_doge width="645" height="455">
 	</body>
 </html>
